<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.mae.ui.home.ProfileFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_editProfileFragment"
            app:destination="@id/navigation_edit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.example.mae.ui.dashboard.ProductFragment"
        android:label="@string/title_dashboard"
...
